--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1,8 +1,8 @@
 
-<!-- saved from url=(0131)file:///C:/___%20Rodney%20Files/UIUC/Classes/CS%20440%20-%20Artificial%20Intelligence/Website%20Offline/CS440%20Assignment%201.html -->
+<!-- saved from url=(0055)http://slazebni.cs.illinois.edu/fall15/assignment1.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>CS440 Assignment 1</title>
-<style type="text/css"></style></head>
+</head>
 <body bgcolor="white">
 
 <table width="800">
@@ -12,7 +12,7 @@
 <table border="0">
 <tbody><tr>
 <td>
-<img src="./instructions_files/pacman_game.gif" width="400">
+<img src="./documentation_files/pacman_game.gif" width="400">
 </td><td width="20">
 </td><td><h2>CS440 Fall 2015</h2>
 <h2>Assignment 1: Maze Search</h2>
@@ -51,7 +51,7 @@ additional problems that are extra credit for everyone else. For more detail, se
 <a name="part1">
 <h2>Part 1: For everybody</h2>
 
-<img src="./instructions_files/maze.jpg">
+<img src="./documentation_files/maze.jpg">
 
 <h3>1.1 Basic pathfinding</h3>
 
